Feat: Add completed_node_ids
- completed_node_ids
