# question/dtos/answer.py
@@ -52,12 +52,14 @@ class MemberAnswerDataDto(BaseModel):
     status: str
     feedback: Optional[str] = None
     going_to_in_progress_node_ids: List[int] = Field(default=[])
+    completed_node_ids: List[int] = Field(default=[])
 
     @classmethod
     def of(
             cls,
             member_answer: UserQuestionAnswer,
-            going_to_in_progress_node_ids: List[int]
+            going_to_in_progress_node_ids: List[int],
+            completed_node_ids: List[int]
     ) -> 'MemberAnswerDataDto':
         status = (
             AnswerStatus.SUCCESS.value if member_answer.is_correct is True
@@ -73,6 +75,7 @@ class MemberAnswerDataDto(BaseModel):
             status=status,
             feedback=member_answer.feedback,
             going_to_in_progress_node_ids=going_to_in_progress_node_ids,
+            completed_node_ids=completed_node_ids,
         )
 
 
